[package]
name = "discord_code_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
discord-presence = "0.5.18"
dotenv = "0.15.0"
json = "0.12.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
